--- a/Old8Lang.PackageManager.Server/appsettings.json
+++ b/Old8Lang.PackageManager.Server/appsettings.json
@@ -1,11 +1,16 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=packages.db"
+    "DefaultConnection": "Host=localhost;Database=Old8LangPackageManager;Username=postgres;Password=Old8Lang123!",
+    "SQLiteConnection": "Data Source=packages.db",
+    "PostgresConnection": "Host=localhost;Database=Old8LangPackageManager;Username=postgres;Password=Old8Lang123!",
+    "Redis": "localhost:6379"
   },
+  "DatabaseProvider": "PostgreSQL",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
   "AllowedHosts": "*",
@@ -22,7 +27,7 @@
   "PackageStorage": {
     "StoragePath": "packages",
     "MaxPackageSize": 104857600,
-    "AllowedExtensions": [ ".o8pkg" ],
+    "AllowedExtensions": [ ".o8pkg", ".whl", ".tgz", ".tar.gz" ],
     "EnableCompression": true
   },
   "Api": {
@@ -30,12 +35,118 @@
     "ServiceName": "Old8Lang Package Manager",
     "BaseUrl": "https://localhost:5001",
     "RequireApiKey": false,
+    "RequireAuthentication": true,
     "RateLimitPerMinute": 100
   },
   "Security": {
     "EnablePackageSigning": false,
     "TrustedCertificates": [],
     "EnableChecksumValidation": true,
-    "AllowedHashAlgorithms": [ "SHA256", "SHA512" ]
+    "AllowedHashAlgorithms": [ "SHA256", "SHA512" ],
+    "Jwt": {
+      "Issuer": "Old8LangPackageManager",
+      "Audience": "Old8LangPackageManager",
+      "SecretKey": "ThisIsASecretKeyForJWTTokenGeneration123456789",
+      "ExpirationMinutes": 1440,
+      "RefreshExpirationDays": 30
+    }
+  },
+  "Authentication": {
+    "EnableRegistration": true,
+    "RequireEmailVerification": false,
+    "AllowGuestUpload": false,
+    "MaxPackagesPerUser": 100,
+    "MaxPackageSizePerUser": 1073741824,
+    "OIDC": {
+      "Enabled": true,
+      "DefaultScheme": "OpenIdConnect",
+      "Providers": {
+        "GitHub": {
+          "Enabled": true,
+          "ClientId": "your-github-client-id",
+          "ClientSecret": "your-github-client-secret",
+          "Authority": "https://github.com",
+          "CallbackPath": "/signin-github",
+          "Scope": [ "user:email" ],
+          "ClaimsMapping": {
+            "NameIdentifier": "id",
+            "Name": "name",
+            "Email": "email",
+            "Avatar": "avatar_url"
+          }
+        },
+        "Google": {
+          "Enabled": true,
+          "ClientId": "your-google-client-id",
+          "ClientSecret": "your-google-client-secret",
+          "Authority": "https://accounts.google.com",
+          "CallbackPath": "/signin-google",
+          "Scope": [ "openid", "profile", "email" ],
+          "ClaimsMapping": {
+            "NameIdentifier": "sub",
+            "Name": "name",
+            "Email": "email",
+            "Avatar": "picture"
+          }
+        },
+        "Custom": {
+          "Enabled": false,
+          "ClientId": "your-custom-client-id",
+          "ClientSecret": "your-custom-client-secret",
+          "Authority": "https://your-oidc-provider.com",
+          "CallbackPath": "/signin-custom",
+          "Scope": [ "openid", "profile", "email" ],
+          "ClaimsMapping": {
+            "NameIdentifier": "sub",
+            "Name": "name",
+            "Email": "email",
+            "Avatar": "picture"
+          }
+        }
+      }
+    }
+  },
+  "IdentityServer": {
+    "Issuer": "https://localhost:5001",
+    "Clients": {
+      "Old8LangPackageManager.Web": {
+        "ClientId": "o8pm-web",
+        "ClientSecret": "o8pm-web-secret",
+        "AllowedGrantTypes": [ "authorization_code", "client_credentials" ],
+        "RedirectUris": [ "http://localhost:3000/callback", "https://localhost:3000/callback" ],
+        "PostLogoutRedirectUris": [ "http://localhost:3000/", "https://localhost:3000/" ],
+        "AllowedScopes": [ "openid", "profile", "email", "o8pm.api" ],
+        "AllowAccessTokensViaBrowser": true,
+        "RequireConsent": false
+      },
+      "Old8LangPackageManager.CLI": {
+        "ClientId": "o8pm-cli",
+        "AllowedGrantTypes": [ "authorization_code", "client_credentials", "device_flow" ],
+        "RedirectUris": [ "http://localhost:5000/signin-oidc" ],
+        "PostLogoutRedirectUris": [ "http://localhost:5000/signout-oidc" ],
+        "AllowedScopes": [ "openid", "profile", "email", "o8pm.api" ],
+        "RequireClientSecret": false
+      }
+    },
+    "Resources": {
+      "Api": {
+        "Name": "Old8Lang Package Manager API",
+        "DisplayName": "Old8Lang Package Manager API",
+        "Scopes": [
+          {
+            "Name": "o8pm.api",
+            "DisplayName": "Old8Lang Package Manager API Access",
+            "Description": "Access to the Old8Lang Package Manager API"
+          }
+        ]
+      }
+    }
+  },
+  "Redis": {
+    "Enabled": true,
+    "ConnectionString": "localhost:6379",
+    "Database": 0,
+    "KeyPrefix": "o8pm:",
+    "DefaultExpiration": "01:00:00"
   }
 }
