--- a/Old8Lang.PackageManager.Example/Old8Lang.PackageManager.Example.csproj
+++ b/Old8Lang.PackageManager.Example/Old8Lang.PackageManager.Example.csproj
@@ -14,6 +14,7 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>Old8Lang.PackageManager</RootNamespace>
   </PropertyGroup>
 
 </Project>
