``` feat: 添加包签名验证系统
- 添加了RSA数字签名验证系统，支持SHA256/SHA512哈希算法
- 实现了X.509证书管理功能，包括生成、导入和信任证书
- 新增签名验证端点：/signatures/verify/{id}/{version}
- 新增签名端点：/signatures/sign/{id}/{version}
- 新增证书管理端点：/signatures/certificates/*
- 在包实体中添加IsSigned、SignedBy、SignedAt字段
- 集成签名验证到包上传和下载流程
- 更新配置选项支持包签名验证设置
```

--- a/Old8Lang.PackageManager.Server/appsettings.json
+++ b/Old8Lang.PackageManager.Server/appsettings.json
@@ -40,6 +40,8 @@
   },
   "Security": {
     "EnablePackageSigning": false,
+    "RequireTrustedCertificates": false,
+    "ValidateCertificateChain": false,
     "TrustedCertificates": [],
     "EnableChecksumValidation": true,
     "AllowedHashAlgorithms": [ "SHA256", "SHA512" ],
