feat(storage): 添加多存储后端支持和包存储抽象层
- 集成 FileSystem、S3、Minio 和 Azure Blob 存储提供程序
- 实现统一的 IStorageProvider 接口用于存储操作抽象
- 添加 AbstractPackageStorageService 作为存储抽象层实现
- 配置文件中添加 Storage 配置节支持多种存储选项
- 扩展 PackageSignature 模型添加验证成功/失败方法
- 在 Program.cs 中注册存储服务并支持存储后端切换

--- a/Old8Lang.PackageManager.Server/appsettings.json
+++ b/Old8Lang.PackageManager.Server/appsettings.json
@@ -30,6 +30,32 @@
     "AllowedExtensions": [ ".o8pkg", ".whl", ".tgz", ".tar.gz" ],
     "EnableCompression": true
   },
+  "Storage": {
+    "ProviderType": "FileSystem",
+    "FileSystem": {
+      "RootPath": "packages"
+    },
+    "S3": {
+      "Region": "us-east-1",
+      "BucketName": "old8lang-packages",
+      "AccessKeyId": "",
+      "SecretAccessKey": "",
+      "ServiceUrl": null
+    },
+    "Minio": {
+      "Endpoint": "localhost:9000",
+      "BucketName": "old8lang-packages",
+      "AccessKey": "",
+      "SecretKey": "",
+      "UseSSL": false
+    },
+    "AzureBlob": {
+      "ConnectionString": "",
+      "ContainerName": "old8lang-packages",
+      "AccountName": null,
+      "UseManagedIdentity": false
+    }
+  },
   "Api": {
     "Version": "3.0.0",
     "ServiceName": "Old8Lang Package Manager",
