``` feat(core): 升级版本到1.1.0并添加包签名和打包功能
- 将包版本从1.0.0升级到1.1.0
- 添加包签名功能，保证包的完整性和真实性
- 添加包打包功能，支持将包保存为文件
- 更新包发布说明和功能描述

feat(server): 实现多语言本地化支持

- 添加ILocalizationService依赖注入
- 将硬编码的错误消息替换为本地化字符串
- 包括搜索、获取包详情、上传、删除、下载等操作的本地化
- 添加依赖树和质量评分等API的本地化支持

feat(server): 配置本地化资源文件和中间件

- 添加Messages.resx和Messages.zh-CN.resx资源文件
- 在Program.cs中配置本地化服务和受支持的语言
- 注册ILocalizationService和RequestLocalizationOptions
- 启用语言中间件

feat(frontend): 添加前端国际化功能

- 安装vue-i18n依赖包
- 添加LanguageSwitcher组件用于语言切换
- 将导航菜单、按钮文本等静态内容替换为本地化字符串
- 在AppHeader.vue中实现导航菜单的国际化
- 更新确认对话框和提示消息的本地化文本
```

--- a/Old8Lang.PackageManager.Core/Old8Lang.PackageManager.Core.csproj
+++ b/Old8Lang.PackageManager.Core/Old8Lang.PackageManager.Core.csproj
@@ -9,7 +9,7 @@
 
     <!-- NuGet 包配置 -->
     <PackageId>Old8Lang.PackageManager.Core</PackageId>
-    <Version>1.0.0</Version>
+    <Version>1.1.0</Version>
     <Authors>Old8Lang Team</Authors>
     <Company>Old8Lang</Company>
     <Product>Old8Lang Package Manager Core</Product>
@@ -22,6 +22,8 @@
 - 版本控制：完整的语义化版本支持
 - 扩展性强：基于接口设计，易于扩展
 - 语言无关：可被任何编程语言的包管理系统使用
+- 包签名：支持包签名，保证包的完整性和真实性
+- 包打包：支持包打包，将包保存为文件        
 
 适用场景：
 - 脚本语言的包管理系统
@@ -35,7 +37,7 @@
     <PackageTags>package-manager;dependency-resolver;version-control;old8lang;scripting;package-management;nuget;dependency-management;package-resolution;language-agnostic</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>v1.0.0 - 初始版本
+    <PackageReleaseNotes>v1.1.0
 - 完整的包解析功能
 - 依赖关系智能解析
 - 多包源管理
