--- a/Old8Lang.PackageManager.Server/Old8Lang.PackageManager.Server.csproj
+++ b/Old8Lang.PackageManager.Server/Old8Lang.PackageManager.Server.csproj
@@ -28,4 +28,14 @@
     <ProjectReference Include="..\Old8Lang.PackageManager.Core\Old8Lang.PackageManager.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\Messages.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Messages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Resources\Messages.zh-CN.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
