--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,31 +11,32 @@
     "lint:style": "stylelint \"src/**/*.{css,scss,vue}\" --fix"
   },
   "dependencies": {
-    "vue": "^3.4.0",
-    "vue-router": "^4.2.5",
-    "pinia": "^2.1.7",
-    "naive-ui": "^2.38.1",
-    "axios": "^1.6.2",
     "@vicons/ionicons5": "^0.12.0",
-    "dayjs": "^1.11.10"
+    "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
+    "naive-ui": "^2.38.1",
+    "pinia": "^2.1.7",
+    "vue": "^3.4.0",
+    "vue-i18n": "^9.14.5",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.0",
-    "@vue/tsconfig": "^0.5.0",
-    "typescript": "~5.3.0",
-    "vite": "^5.0.0",
-    "vue-tsc": "^1.8.25",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.10.0",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
+    "@vitejs/plugin-vue": "^5.0.0",
+    "@vue/tsconfig": "^0.5.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
     "eslint-plugin-vue": "^9.19.2",
+    "postcss": "^8.4.32",
     "stylelint": "^16.1.0",
-    "stylelint-config-standard": "^36.0.0",
     "stylelint-config-recommended-vue": "^1.5.0",
-    "@tailwindcss/typography": "^0.5.10"
+    "stylelint-config-standard": "^36.0.0",
+    "tailwindcss": "^3.4.0",
+    "typescript": "~5.3.0",
+    "vite": "^5.0.0",
+    "vue-tsc": "^1.8.25"
   }
 }
