feat(core): 添加日志记录和异常处理功能
- 在 DefaultPackageResolver 中添加 ILogger 支持并实现依赖解析日志记录
- 添加 DependencyResolutionException 和 PackageNotFoundException 异常处理
- 在 LocalPackageSource 中集成日志记录并改进异常处理机制
- 添加 PackageSourceException 用于处理包源相关错误
- 在 RemotePackageSource 中实现网络请求日志记录和异常处理
- 在 PackageSignatureService 中添加签名验证日志和异常处理
- 引入 Microsoft.Extensions.Logging.Abstractions 依赖包
- 为所有服务添加空日志记录器作为默认值以支持可选依赖注入

--- a/Old8Lang.PackageManager.Core/Old8Lang.PackageManager.Core.csproj
+++ b/Old8Lang.PackageManager.Core/Old8Lang.PackageManager.Core.csproj
@@ -65,9 +65,10 @@
   </ItemGroup>
 
   <!-- 依赖项（如果有的话） -->
-  <ItemGroup>
-    <!-- 这里可以添加外部依赖 -->
+  <ItemGroup><!-- 这里可以添加外部依赖 -->
     <!-- <PackageReference Include="Newtonsoft.Json" Version="13.0.3" /> -->
+  
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.1" />
   </ItemGroup>
 
 </Project>
