--- a/Old8Lang.PackageManager.Core/Old8Lang.PackageManager.Core.csproj
+++ b/Old8Lang.PackageManager.Core/Old8Lang.PackageManager.Core.csproj
@@ -69,6 +69,8 @@
     <!-- <PackageReference Include="Newtonsoft.Json" Version="13.0.3" /> -->
   
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.1" />
+  
+    <PackageReference Include="Polly" Version="8.6.5" />
   </ItemGroup>
 
 </Project>
