chore(config): 更新配置文件和环境变量设置
- 在 .gitignore 中添加环境文件忽略规则
- 修改 appsettings.json 中的数据库连接配置，切换为 SQLite 并移除敏感信息
- 禁用 OIDC 认证提供者并清理相关配置
- 更新 JWT 密钥配置为生产环境安全值
- 扩展 LoggerExtensions.cs 添加详细的结构化日志定义
- 为异常类添加完整的 XML 文档注释
- 添加 DotNetEnv 包依赖以支持环境变量加载
- 在 Program.cs 中集成环境变量加载功能
- 添加 .env.example 和 .env.docker 配置示例文件
- 创建 CONFIGURATION.md 配置文档

--- a/.gitignore
+++ b/.gitignore
@@ -68,5 +68,11 @@ mono_crash.*
 appsettings.Development.json
 appsettings.Local.json
 
+# Environment files (contains sensitive data)
+# Note: .env.example and .env.docker are template files and should be committed
+.env
+.env.local
+.env.*.local
+
 # Package cache
 o8packages.json.backup
