--- a/Old8Lang.PackageManager.Server/appsettings.json
+++ b/Old8Lang.PackageManager.Server/appsettings.json
@@ -1,11 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=Old8LangPackageManager;Username=postgres;Password=Old8Lang123!",
+    "DefaultConnection": "Data Source=packages.db",
     "SQLiteConnection": "Data Source=packages.db",
-    "PostgresConnection": "Host=localhost;Database=Old8LangPackageManager;Username=postgres;Password=Old8Lang123!",
+    "PostgresConnection": "Host=localhost;Database=Old8LangPackageManager;Username=postgres;Password=",
     "Redis": "localhost:6379"
   },
-  "DatabaseProvider": "PostgreSQL",
+  "DatabaseProvider": "SQLite",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -74,7 +74,7 @@
     "Jwt": {
       "Issuer": "Old8LangPackageManager",
       "Audience": "Old8LangPackageManager",
-      "SecretKey": "ThisIsASecretKeyForJWTTokenGeneration123456789",
+      "SecretKey": "CHANGE_THIS_SECRET_KEY_FOR_PRODUCTION",
       "ExpirationMinutes": 1440,
       "RefreshExpirationDays": 30
     }
@@ -86,13 +86,13 @@
     "MaxPackagesPerUser": 100,
     "MaxPackageSizePerUser": 1073741824,
     "OIDC": {
-      "Enabled": true,
+      "Enabled": false,
       "DefaultScheme": "OpenIdConnect",
       "Providers": {
         "GitHub": {
-          "Enabled": true,
-          "ClientId": "your-github-client-id",
-          "ClientSecret": "your-github-client-secret",
+          "Enabled": false,
+          "ClientId": "",
+          "ClientSecret": "",
           "Authority": "https://github.com",
           "CallbackPath": "/signin-github",
           "Scope": [ "user:email" ],
@@ -104,9 +104,9 @@
           }
         },
         "Google": {
-          "Enabled": true,
-          "ClientId": "your-google-client-id",
-          "ClientSecret": "your-google-client-secret",
+          "Enabled": false,
+          "ClientId": "",
+          "ClientSecret": "",
           "Authority": "https://accounts.google.com",
           "CallbackPath": "/signin-google",
           "Scope": [ "openid", "profile", "email" ],
@@ -119,8 +119,8 @@
         },
         "Custom": {
           "Enabled": false,
-          "ClientId": "your-custom-client-id",
-          "ClientSecret": "your-custom-client-secret",
+          "ClientId": "",
+          "ClientSecret": "",
           "Authority": "https://your-oidc-provider.com",
           "CallbackPath": "/signin-custom",
           "Scope": [ "openid", "profile", "email" ],
